# omnixys-logstream-service

./: .gitignore  .health.env  404.html  Dockerfile  README.md  idee.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci-cd.yml  daily-dependency-check.yml  dependecy-check.yml  docker-weekly.yml  release.yml  security.yml  update-docker-image.yml
er-diagramm/: index.html
komponentendiagramm/: index.html
modules/__init__/: index.html
modules/entity/: index.html
modules/graphql/: index.html
modules/repository/: index.html
modules/rest/: index.html
modules/security/: index.html
modules/service/: index.html
schichtenarchitektur/: index.html
src/logstream/: __init__.py  __main__.py  asgi_server.py  banner.py  banner2.py  main.py
src/logstream/api/rest/: export_routes.py  log_routes.py  secure_log_routes.py
src/logstream/config/: env.py  server.py  tls.py
src/logstream/core/: auth.py  config.py  dependency_provider.py  env.py  kafka_consumer.py  keycloak_service.py  loki_client.py  settings_loader.py
src/logstream/health/: health_env.py  router.py  service.py
src/logstream/models/: log_entry.py
src/logstream/services/: alert_service.py
src/logstream/services/channels/: discord.py  email.py  webhook.py
src/logstream/tools/: show_config.py
src/logstream/utils/: retry_utils.py
use-cases/: index.html
