[project]
name = "logstream-service"
version = "2025.05.02"
description = "logstream Microservice mit FastAPI, Keycloak, Kafka"
readme = "README.md"
authors = [{ name = "Caleb Gyamfi", email = "caleb-script@outlook.de" }]
maintainers = [{ name = "Caleb Gyamfi", email = "caleb-script@outlook.de" }]
requires-python = ">=3.13"

dependencies = [
           # --- Kafka ---
    "aiokafka",                        # Kafka Client
    "orjson",                          # Schnellere JSON bib

    # --- Web & Core ---
    "fastapi[standard]",
    "python-dotenv",                    # .env-Verwaltung
    "pydantic-settings",            # Settings mit Pydantic v2

    # --- Observability ---
    "loguru>=0.7.3",
    "opentelemetry-api>=1.14.0",
    "opentelemetry-exporter-otlp",   # OTLP Export zu Tempo
    "opentelemetry-exporter-prometheus", # Prometheus Export
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-pymongo",
    "opentelemetry-sdk>=1.14.0",
    "prometheus-fastapi-instrumentator",

    "httpx",                           # Async HTTP Client
    "hypercorn>=0.17.3",              # ASGI Server
    "pyfiglet>=1.0.2",  # ASCII-Banner für Logs oder CLI
    "tabulate>=0.9.0",  # um tabellen im log zu erstellen
]

[project.scripts]
logstream = "logstream:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
homepage = "https://www.omnixys.com"
repository = "https://github.com/omnixys/omnixys-logstream-service"
documentation = "https://readthedocs.org"
changelog = "https://github.com/gentlecorp/logstream/blob/main/CHANGELOG.md"

[dependency-groups]
build = ["hatch", "hatchling"]

dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-html",
  "requests",
  "locust",
]

cli = [
  "typer[all]>=0.9.0"
]

alerts = [
  "fastapi-mail",
  "httpx"
]

doc = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "mkdocstrings[python]",
  "mkdocstrings-python",
  "griffe",
  "mistune",
]

lint = [
  "ruff",
  "safety",
  "vulture",
  "types-tabulate",
]


[tool.hatch.build.targets.sdist]
include = ["src/logstream"]

[tool.hatch.build.targets.wheel]
packages = ["src/logstream"]

[tool.uv]
default-groups = "all"
